# altoiddd

./: .gitignore  .go-arch-lint.yml  .golangci.yml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  arch-go.yml  go.mod  go.sum  pyproject.toml
.alto/: bounded_context_map.yaml
.alto/knowledge/conventions/: tdd.md
.alto/knowledge/cross-tool/: agents-md.toml  concept-mapping.toml  generation-matrix.toml
.alto/knowledge/ddd/: domain-storytelling.md  event-storming.md  strategic-patterns.md
.alty/: bounded_context_map.yaml
.alty/knowledge/: _index.toml
.alty/knowledge/conventions/: quality-gates.md  solid.md
.alty/knowledge/cross-tool/: agents-md.toml  concept-mapping.toml  generation-matrix.toml
.alty/knowledge/ddd/: domain-storytelling.md  event-storming.md  strategic-patterns.md  tactical-patterns.md
.beads/: README.md  issues.jsonl  metadata.json
.claude/: CLAUDE.md
.claude/agents/: developer.md  project-manager.md  qa-engineer.md  researcher.md  tech-lead.md  white-hacker.md
.claude/commands/: alty-brainstorm.md  architecture-docs.md  brainstorm.md  code-review.md  doc-health.md  groom.md  prd-traceability.md  review.md
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml  release.yaml  website.yaml
cmd/alto/: main.go  main_test.go  smoke_test.go
cmd/alto-mcp/: main.go  main_test.go
cmd/alto/commands/: check.go  detect.go  dochealth.go  dochealth_test.go  fitness.go  fitness_test.go  gap.go  gap_test.go  generate.go  generate_test.go  guide.go  guide_ingest_test.go  import.go  import_test.go  init.go  init_test.go  kb.go  kb_test.go  persona.go  tickethealth.go  ticketverify.go
cmd/alty/: main.go  main_test.go  smoke_test.go
cmd/alty-mcp/: main.go  main_test.go
cmd/alty/commands/: check.go  detect.go  dochealth.go  dochealth_test.go  fitness.go  fitness_test.go  gap.go  gap_test.go  generate.go  generate_test.go  guide.go  guide_ingest_test.go  import.go  import_test.go  init.go  init_test.go  kb.go  kb_test.go  persona.go  tickethealth.go  ticketverify.go
docs/: ARCHITECTURE.md  DDD.md  PRD.md  RLM.md  internal-formats.md
docs/beads_templates/: beads-epic-template.md  beads-spike-template.md  beads-stub-template.md  beads-ticket-template.md
docs/guides/: ai-tool-integration.md  cli-reference.md  concepts.md  existing-project.md  installation.md  new-project.md  quickstart.md
docs/plans/: 2026-02-23-alty-saas-platform-design.md
docs/reference/: beads-knowledge.md  project_setup_reference.sh
docs/research/: 20260222_backlog_freshness_ticket_decay.md  20260222_cli_framework_comparison.md  20260222_cli_mcp_design.md  20260222_ddd_persona_adapted_discovery.md  20260222_ddd_question_framework.md  20260222_guided_ddd_question_framework_consolidated.md  20260222_killer_features.md  20260222_knowledge_base_structure.md  20260222_mcp_server_python_sdk.md  20260222_metagpt_pythagora_competitive_analysis.md  20260222_python_architecture_testing_fitness_functions.md  20260222_subdomain_classification_complexity_budget.md  20260222_vibe_coding_landscape.md  20260223_fitness_function_design.md  20260223_gap_analysis_design.md  20260223_ripple_review_design.md  20260223_ticket_pipeline_design.md  20260301_mcp_multi_turn_sessions.md  20260303_multi_language_multi_stack_tooling.md  20260303_tech_stack_strategy.md  20260304_alty_directory_structure.md  20260304_ripple_review_validation.md  20260305_ai_assisted_ddd_session_design.md  20260305_claude_agent_sdk_evaluation.md  20260305_ddd_collaborative_modeling_2026.md  20260305_vscode_svelte5_xyflow_setup.md  20260306_1_duckduckgo_search_evaluation.md  20260306_2_go_ddd_event_systems_messaging.md  20260306_3_severity1_claude_agent_sdk_go.md  20260306_4_go_ecosystem_parity_evaluation.md  20260306_5_go_rewrite_evaluation.md  20260306_duckduckgo_search_evaluation.md  20260307_1_go_ai_tool_ecosystem_local_llm.md  20260307_2_go_team_development_patterns.md  20260307_3_go_migration_team_execution.md  20260307_4_go_project_setup_best_practices.md  20260307_5_go_migration_case_studies.md  20260307_6_watermill_cqrs_deep_dive.md  20260308_go_mcp_sdk_spike.md  20260308_mcp_security_codebase_audit.md  (+11 more)
docs/spikes/: ddd_reference.md
docs/templates/: ARCHITECTURE_TEMPLATE.md  DDD_STORY_TEMPLATE.md  PRD_TEMPLATE.md
internal/bootstrap/application/: bootstrap_handler.go  bootstrap_handler_test.go  ports.go  ports_test.go
internal/bootstrap/domain/: bootstrap_events.go  bootstrap_events_test.go  bootstrap_session.go  bootstrap_session_test.go  (+4 more)
internal/composition/: adapters.go  app.go  app_test.go  event_subscribers.go
internal/integration/: bootstrap_alty_dir_test.go  classification_flow_test.go  cli_discovery_test.go  config_generation_test.go  cross_context_test.go  gap_command_test.go  handler_flow_test.go  session_tracker_test.go  ticket_generation_test.go
internal/mcp/: audit.go  audit_test.go  content_tagger.go  content_tagger_test.go  enum_mappers.go  enum_mappers_test.go  error_sanitizer.go  error_sanitizer_test.go  fuzz_test.go  input_validation.go  input_validation_test.go  integration_test.go  middleware_integration_test.go  model_store.go  model_store_test.go  output_sanitizer.go  output_sanitizer_test.go  rate_limiter.go  rate_limiter_test.go  resources.go  resources_test.go  security_test.go  tier_enforcer.go  tier_enforcer_test.go  tools_bootstrap.go  tools_bootstrap_test.go  tools_challenge.go  tools_challenge_test.go  tools_discovery.go  tools_discovery_test.go
scripts/qa/: README.md  run-all.sh
src/application/: __init__.py
src/domain/: __init__.py
src/infrastructure/: __init__.py  composition.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_stack_profile_e2e.py
tests/helpers/: doc_review_helpers.py
tests/infrastructure/: test_composition.py  test_knowledge_entries.py  test_knowledge_versions.py
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/: content.config.ts
(+595 files in other folders)
